[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Ryo Aita <792803+aita@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
